compiler/tools/fpp-check/test/param/negative_set_opcode.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/param/negative_set_opcode.fpp:3.27
  param P: U32 set opcode -1
                          ^
error: invalid integer value -1
value may not be negative
